# unet

./: CMakeLists.txt  FindOpenCL.cmake  LICENSE  README.md  version.sh
include/unet/: NetworkFunction.hpp  OpenCLDevice.hpp  OpenCLDeviceManager.hpp  unet.hpp
src/: CLNetwork.cpp  CMakeLists.txt  Functions.cpp  Logging.cpp  NetworkFunction.cpp  OpenCLDevice.cpp  OpenCLDevice.hpp  OpenCLDeviceManager.cpp  OpenCLNetworkFunction.cpp  OpenCLNetworkFunction.hpp  internal.hpp
tests/: BuildCheck.cpp  BuildCheckMem.cpp  BuildCheckVersion.cpp  CMakeLists.txt  FunctionCheckOpenCL.cpp  LogCheckReplacement.cpp  OpenCLDeviceCheck.cpp  OpenCLDeviceManagerCheck.cpp  OpenCLDeviceMemCheck.cpp  OpenCLNetworkFunctionCheck.cpp  OpenCLNetworkFunctionExecuteCheck.cpp  OpenCLXORCheck.cpp
